Home page updated

--- a/gihon/index.html
+++ b/gihon/index.html
@@ -481,52 +481,109 @@
                         <div class="col-md-12">
                             <div class="testimonial-wrapper">
                                 <div class="single-testimonial">
-                                    <blockquote>
-                                        <div class="client-info">
-                                            <img src="img/avatar/1.jpg" alt="">
-                                            <div class="info-description">
-                                                <p class="client-name">steven smith</p>
-                                                <p class="client-position">project manager</p>
+                                    <div class="single-testimonial-content">
+                                        <blockquote>
+                                            <div class="client-info">
+                                                <img src="img/avatar/1.jpg" alt="">
+                                                <div class="info-description">
+                                                    <p class="client-name">steven smith</p>
+                                                    <p class="client-position">project manager</p>
+                                                </div>
+                                                <ul class="rating list-inline">
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                </ul>                                                
                                             </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur? Dolores, labore hic, veniam aspernatur facere tempora fuga commodi nemo reiciendis quo, quod maiores.</p>
-                                    </blockquote>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                        </blockquote>
+                                    </div>
                                 </div>
                                 <div class="single-testimonial">
-                                    <blockquote>
-                                        <div class="client-info">
-                                            <img src="img/avatar/1.jpg" alt="">
-                                            <div class="info-description">
-                                                <p class="client-name">steven smith</p>
-                                                <p class="client-position">project manager</p>
+                                    <div class="single-testimonial-content">
+                                        <blockquote>
+                                            <div class="client-info">
+                                                <img src="img/avatar/1.jpg" alt="">
+                                                <div class="info-description">
+                                                    <p class="client-name">steven smith</p>
+                                                    <p class="client-position">project manager</p>
+                                                </div>
+                                                <ul class="rating list-inline">
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                </ul>                                                
                                             </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur? Dolores, labore hic, veniam aspernatur facere tempora fuga commodi nemo reiciendis quo, quod maiores.</p>
-                                    </blockquote>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                        </blockquote>
+                                    </div>
                                 </div>
                                 <div class="single-testimonial">
-                                    <blockquote>
-                                        <div class="client-info">
-                                            <img src="img/avatar/1.jpg" alt="">
-                                            <div class="info-description">
-                                                <p class="client-name">steven smith</p>
-                                                <p class="client-position">project manager</p>
+                                    <div class="single-testimonial-content">
+                                        <blockquote>
+                                            <div class="client-info">
+                                                <img src="img/avatar/1.jpg" alt="">
+                                                <div class="info-description">
+                                                    <p class="client-name">steven smith</p>
+                                                    <p class="client-position">project manager</p>
+                                                </div>
+                                                <ul class="rating list-inline">
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                </ul>                                                
                                             </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur? Dolores, labore hic, veniam aspernatur facere tempora fuga commodi nemo reiciendis quo, quod maiores.</p>
-                                    </blockquote>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                        </blockquote>
+                                    </div>
                                 </div>
                                 <div class="single-testimonial">
-                                    <blockquote>
-                                        <div class="client-info">
-                                            <img src="img/avatar/1.jpg" alt="">
-                                            <div class="info-description">
-                                                <p class="client-name">steven smith</p>
-                                                <p class="client-position">project manager</p>
+                                    <div class="single-testimonial-content">
+                                        <blockquote>
+                                            <div class="client-info">
+                                                <img src="img/avatar/1.jpg" alt="">
+                                                <div class="info-description">
+                                                    <p class="client-name">steven smith</p>
+                                                    <p class="client-position">project manager</p>
+                                                </div>
+                                                <ul class="rating list-inline">
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                </ul>                                                
                                             </div>
-                                        </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur? Dolores, labore hic, veniam aspernatur facere tempora fuga commodi nemo reiciendis quo, quod maiores.</p>
-                                    </blockquote>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                        </blockquote>
+                                    </div>
+                                </div>
+                                <div class="single-testimonial">
+                                    <div class="single-testimonial-content">
+                                        <blockquote>
+                                            <div class="client-info">
+                                                <img src="img/avatar/1.jpg" alt="">
+                                                <div class="info-description">
+                                                    <p class="client-name">steven smith</p>
+                                                    <p class="client-position">project manager</p>
+                                                </div>
+                                                <ul class="rating list-inline">
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                    <li><i class="fa fa-star"></i></li>
+                                                </ul>
+                                            </div>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                        </blockquote>
+                                    </div>
                                 </div>
                             </div>
                         </div>
