Home page updted with 2 new section

--- a/gihon/index.html
+++ b/gihon/index.html
@@ -301,10 +301,10 @@
                                 <h2>Make Good looking website faster</h2>
                                 <p>Use <span class="marked">Gihon</span> for crating your website. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia commodi ex quasi in quod, nulla ipsum libero facere temporibus repellat.</p>
                                 <ul class="cx-list">
-                                    <li><i class="fa fa-check"></i> Follow all your data from the website</li>
-                                    <li><i class="fa fa-check"></i> Follow all your data from the website</li>
-                                    <li><i class="fa fa-check"></i> Follow all your data from the website</li>
-                                    <li><i class="fa fa-check"></i> Follow all your data from the website</li>
+                                    <li><i class="fa fa-check"></i>On the other hand, we denounce with.</li>
+                                    <li><i class="fa fa-check"></i>when our power of choice is untrammeled.</li>
+                                    <li><i class="fa fa-check"></i>I must explain to you how all this mistaken.</li>
+                                    <li><i class="fa fa-check"></i>we denounce with righteous indignation.</li>
                                 </ul>
                                 <a href="#" class="button mt-10">Learn More</a>
                             </div>
@@ -473,13 +473,13 @@
                         <div class="col-md-12">
                             <div class="area-heading text-center">
                                 <h2 class="area-title">From our clients.</h2>
-                                <p>Doloremque ullam odio minima itaque, modi unde facere fugit aliquid eum necessitatibus. </p>
+                                <p>But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures.</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="testimonial-wrapper">
+                            <div class="testimonial-wrapper navigation-one">
                                 <div class="single-testimonial">
                                     <div class="single-testimonial-content">
                                         <blockquote>
@@ -489,15 +489,15 @@
                                                     <p class="client-name">steven smith</p>
                                                     <p class="client-position">project manager</p>
                                                 </div>
-                                                <ul class="rating list-inline">
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                </ul>                                                
                                             </div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                            <p> But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. </p>
+                                            <ul class="rating list-inline">
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                            </ul>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -510,15 +510,15 @@
                                                     <p class="client-name">steven smith</p>
                                                     <p class="client-position">project manager</p>
                                                 </div>
-                                                <ul class="rating list-inline">
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                </ul>                                                
                                             </div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+                                            <ul class="rating list-inline">
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star-half-o"></i></li>
+                                            </ul>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -531,15 +531,15 @@
                                                     <p class="client-name">steven smith</p>
                                                     <p class="client-position">project manager</p>
                                                 </div>
-                                                <ul class="rating list-inline">
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                </ul>                                                
                                             </div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                            <p>Ichard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites</p>
+                                            <ul class="rating list-inline">
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                            </ul>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -552,15 +552,15 @@
                                                     <p class="client-name">steven smith</p>
                                                     <p class="client-position">project manager</p>
                                                 </div>
-                                                <ul class="rating list-inline">
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                </ul>                                                
                                             </div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
+                                            <ul class="rating list-inline">
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star-half-o"></i></li>
+                                            </ul>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -573,16 +573,83 @@
                                                     <p class="client-name">steven smith</p>
                                                     <p class="client-position">project manager</p>
                                                 </div>
-                                                <ul class="rating list-inline">
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                    <li><i class="fa fa-star"></i></li>
-                                                </ul>
                                             </div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eum. Omnis blanditiis suscipit minima, odio culpa repudiandae vero praesentium illum, neque facere unde, aliquid aliquam dicta aspernatur?</p>
+                                            <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment</p>
+                                            <ul class="rating list-inline">
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star"></i></li>
+                                                <li><i class="fa fa-star-half-o"></i></li>
+                                            </ul>
                                         </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="brand-logo-area ">
+                    <div class="container ">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="area-heading text-center">
+                                    <h2 class="area-title">Our Loyal Partners.</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ullam odio minima itaque, modi unde facere fugit aliquid eum necessitatibus. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col-md-12 ">
+                                <div class="brand-logo-slider text-center">
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/1.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/2.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/3.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/4.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/5.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/3.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="single-brand">
+                                        <div class="single-brand-outer">
+                                            <div class="single-brand-inner">
+                                                <img src="img/brand/4.png" alt="" class="img-responsive center-block">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -591,6 +658,36 @@
                 </div>
             </div>
             <!-- cx testimonial section end -->
+            <!-- cx subscribe section start -->
+            <div class="cx-section white-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="area-heading text-center">
+                                <h2 class="area-title">subscribe to get in touch</h2>
+                                <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2 text-center">
+                            <div class="subscription-box">
+                                <form class="subscription-form" method="POST" action="#">
+                                    <div class="input-group">
+                                        <div class="subscribe-input">
+                                            <input type="email" class="subscribe-control" placeholder="Your Email Address">
+                                        </div>
+                                        <div class="subscribe-input">
+                                            <button class="button email-submit-btn" type="submit">Subscribe<i class="fa fa-paper-plane"></i></button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- cx subscribe section start -->
         </section>
         <!-- Page content area end -->
         <!-- cx footer section start -->
