Home page updted with 2 new section

--- a/gihon/index.html
+++ b/gihon/index.html
@@ -34,12 +34,10 @@
                                     <ul class="main-menu">
                                         <li><a href="#">Home<i class="fa fa-angle-down"></i></a>
                                             <ul>
-                                                <li><a href="index.html">pishon - home 1</a></li>
-                                                <li><a href="index-2.html">pishon - home 2</a></li>
-                                                <li><a href="index-3.html">pishon - home 3</a></li>
-                                                <li><a href="index-4.html">pishon - home 4</a></li>
-                                                <li><a href="index-5.html">pishon - home 5</a></li>
-                                                <li><a href="index-6.html">pishon - home 6</a></li>
+                                                <li><a href="index.html">Gihon - home 1</a></li>
+                                                <li><a href="index-2.html">Gihon - home 2</a></li>
+                                                <li><a href="index-3.html">Gihon - home 3</a></li>
+                                                
                                             </ul>
                                         </li>
                                         <li><a href="#">portfolio<i class="fa fa-angle-down"></i></a>
@@ -123,7 +121,7 @@
         <!-- Header area end -->
         <!-- Slider area start -->
         <div class="cx-slider-area">
-            <div class="slider-wrapper">
+            <div class="slider-wrapper navigation-one">
                 <div class="single-slider slider-1">
                     <div class="single-slider-wrapper">
                         <div class="container">
@@ -131,8 +129,8 @@
                                 <div class="col-md-12">
                                     <div class="slider-content-wrapper">
                                         <div class="slider-content">
-                                            <p>welcome to <span>pishon</span></p>
-                                            <h1>pishon corporate template</h1>
+                                            <p>welcome to <span>Gihon</span></p>
+                                            <h1>Gihon corporate template</h1>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                             <div class="slider-button">
                                                 <a class="button" href="#">learn more</a>
@@ -152,7 +150,7 @@
                                 <div class="col-md-12">
                                     <div class="slider-content-wrapper">
                                         <div class="slider-content text-left text-dark">
-                                            <p>welcome to <span>pishon</span></p>
+                                            <p>welcome to <span>Gihon</span></p>
                                             <h1>We are creative company</h1>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                             <div class="slider-button">
@@ -172,7 +170,7 @@
                                 <div class="col-md-12">
                                     <div class="slider-content-wrapper">
                                         <div class="slider-content text-left text-dark">
-                                            <p>welcome to <span>pishon</span></p>
+                                            <p>welcome to <span>Gihon</span></p>
                                             <h1>We are creative company</h1>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                             <div class="slider-button">
@@ -698,11 +696,11 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="footer-about-info-area footer-top-content">
                                 <div class="footer-widget-heading">
-                                    <a class="logo" href="index.html"><i class="bi bi-crown"></i><span>pi</span>shon</a>
+                                    <a class="logo" href="index.html">Gihon</a>
                                 </div>
                                 <div class="footer-widget-content">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem en molestiae quis, maiores explicabo inventore sit quos. </p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, vero?</p>
+                                    <button class="button email-submit-btn" type="submit">Contact Us</button>
                                 </div>
                             </div>
                         </div>
