--- a/nitcoin/index.html
+++ b/nitcoin/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pishon | Home</title>
+    <title>Nitcoin | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/icons/favicon.png">
@@ -50,7 +50,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6 col-xs-6">
                             <div class="logo-wrapper">
-                                <a class="logo" href="index.html"><i class="bi bi-crown"></i>pishon</a>
+                                <a class="logo" href="index.html"><img src="img/logo/logo.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-md-9 hidden-xs hidden-sm">
